# ttime

./: .requirements.txt.kate-swp  README.md  pyproject.toml  requirements.txt
ttime/: main.py
